# dvup

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/i18n/: en.toml  zh-CN.toml
configs/: dvup.example.toml  dvup.user.example.toml
src/: ai.rs  cli.rs  command.rs  config.rs  credential.rs  datetime.rs  detach.rs  doctor.rs  error.rs  generation.rs  i18n.rs  job.rs  main.rs  process.rs  release.rs  settings.rs  state.rs  tui.rs  version.rs  worker.rs
tests/: config_scope.rs
