[package]
name = "dvup"
version = "0.1.0"
edition = "2024"
description = "A lock-aware, cross-platform toolchain updater"
license = "MIT"
rust-version = "1.85"

[dependencies]
arboard = { version = "3.6", default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.28"
directories = "6.0"
fs2 = "0.4"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.36"
taplo = { version = "0.14", default-features = false }
thiserror = "2.0"
toml = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.20"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
